add readme.md and fix some files

--- a/.env.development
+++ b/.env.development
@@ -10,13 +10,9 @@ VITE_APP_BASE_API = '/api'
 VITE_APP_UPLOAD_PREFIX_API = '/public'
 
 # ===== JAVA版本配置 =====
-# VITE_APP_TARGET='http://localhost:8088'
-# VITE_APP_UPLOAD_URL = 'http://localhost:8088/public'
+ VITE_APP_TARGET='http://localhost:8088'
+ VITE_APP_UPLOAD_URL = 'http://localhost:8088/public'
 
 # ===== PHP版本配置 =====
-VITE_APP_TARGET= 'http://localhost:80/index.php'
-VITE_APP_UPLOAD_URL = 'http://localhost:80/public'
-
-# VITE_APP_BASE_IMAGE_URL='http://localhost:8088/image/'
-# VITE_APP_TARGET='http://localhost:8088'
-# VITE_APP_TARGET='http://localhost:81/index.php'
+#VITE_APP_TARGET= 'http://localhost:80/index.php'
+#VITE_APP_UPLOAD_URL = 'http://localhost:80/public'
