--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "sortablejs": "^1.14.0",
     "vue": "^3.2.40",
     "vue-i18n": "^9.1.9",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
