--- a/.env.development
+++ b/.env.development
@@ -10,9 +10,13 @@ VITE_APP_BASE_API = '/api'
 VITE_APP_UPLOAD_PREFIX_API = '/public'
 
 # ===== JAVA版本配置 =====
- VITE_APP_TARGET='http://localhost:8088'
- VITE_APP_UPLOAD_URL = 'http://localhost:8088/public'
+# VITE_APP_TARGET='http://localhost:8088'
+# VITE_APP_UPLOAD_URL = 'http://localhost:8088/public'
 
 # ===== PHP版本配置 =====
-#VITE_APP_TARGET= 'http://localhost:80/index.php'
-#VITE_APP_UPLOAD_URL = 'http://localhost:80/public'
+VITE_APP_TARGET= 'http://localhost:80/index.php'
+VITE_APP_UPLOAD_URL = 'http://localhost:80/public'
+
+# ===== Python版本配置 =====
+#VITE_APP_TARGET= 'http://localhost:5000'
+#VITE_APP_UPLOAD_URL = 'http://localhost:5000/public'
